# gaze-av-aloha

./: .gitignore  .gitmodules  README.md  experiments.txt  index.html
gaze_av_aloha/: pyproject.toml
gaze_av_aloha/configs/: .gitignore  default.yaml
gaze_av_aloha/configs/policy/: cage_policy.yaml  dino_policy.yaml  flow_policy.yaml  foveated_policy.yaml  foveated_vit_policy.yaml  gaze_policy.yaml  low_res_vit_policy.yaml  no_gaze_policy.yaml  resnet_policy.yaml  stt_policy.yaml  vit_policy.yaml
gaze_av_aloha/configs/task/: av_aloha_sim.yaml  av_aloha_sim_cube_transfer.yaml  av_aloha_sim_hook_package.yaml  av_aloha_sim_peg_insertion.yaml  av_aloha_sim_pour_test_tube.yaml  av_aloha_sim_slot_insertion.yaml  av_aloha_sim_thread_needle.yaml  pusht.yaml  test.yaml
gaze_av_aloha/configs/train/: default.yaml  short.yaml
gaze_av_aloha/configs/wandb/: gaze.yaml
gaze_av_aloha/gaze_av_aloha/: __init__.py  configs.py  eval.py  train.py  visualize.py
gaze_av_aloha/gaze_av_aloha/policies/: normalize.py  policy.py
gaze_av_aloha/gaze_av_aloha/robot/: cameras.py  config.py  env.py  robot.py
gaze_av_aloha/gaze_av_aloha/utils/: logging_utils.py  policy_utils.py  utils.py
gaze_av_aloha/notebooks/: batch_stt copy.ipynb  batch_stt.ipynb  gflops.ipynb  pos_embed.ipynb  stt.ipynb  time.ipynb  train_gaze_model.ipynb  train_gaze_model.py  train_mdn.ipynb  vit.ipynb  viz_gaze_model.ipynb  viz_tokenizer.ipynb
gaze_av_aloha/notebooks/old/: batch_stt.ipynb  conv1d.ipynb  mask.ipynb  (+5 more)
gaze_av_aloha/scripts/: dataset.ipynb  record_real_episodes.py  train.py  train_gaze_model.py
(+92 files in other folders)
