[tool.poetry]
name = "gaze_av_aloha"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
hydra-core = "^1.3.2"
timm = "^1.0.15"
segment_this_thing = { git = "https://github.com/facebookresearch/segment_this_thing.git", rev = "fc477be61952496822537e9ec44aa9831c6be195" }
requests = "^2.32.3"
matplotlib = "^3.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
